--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -18,5 +18,5 @@ jobs:
       - name: Install packages
         run: |
           pip install -U pip setuptools wheel
-          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
       - uses: pre-commit/action@v3.0.0
