style: update markdownlint hook (#2)
* feat: update markdownlint hook

* feat: pre-commit autoupdate

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,7 +23,7 @@ repos:
       - id: python-use-type-annotations
       - id: python-no-log-warn
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.37.3
+    rev: v2.38.0
     hooks:
       - id: pyupgrade
         args: ["--py37-plus"]
@@ -84,3 +84,11 @@ repos:
             "--rcfile=pyproject.toml",  # Link to your config file
             "--load-plugins=pylint_airflow",
           ]
+      - id: lint-markdown
+        name: Run markdownlint
+        description: Checks the style of Markdown files.
+        entry: markdownlint
+        language: node
+        types: [markdown]
+        files: \.(md|mdown|markdown)$
+        additional_dependencies: ['markdownlint-cli']
