--- a/volumes.yaml
+++ b/volumes.yaml
@@ -9,7 +9,7 @@ spec:
   capacity:
     storage: 2Gi
   hostPath:
-    path: /opt/airflow/dags/
+    path: /opt/airflow/mounted-from-host/dags/
   storageClassName: airflow-storageclass
   claimRef:
     name: airflow-dag
@@ -19,6 +19,35 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: airflow-dag
+  namespace: airflow
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 2Gi
+  storageClassName: airflow-storageclass
+---
+kind: PersistentVolume
+apiVersion: v1
+metadata:
+  name: airflow-local
+spec:
+  accessModes:
+    - ReadWriteMany
+  capacity:
+    storage: 2Gi
+  hostPath:
+    path: /opt/airflow/mounted-from-host/airflow-local/
+  storageClassName: airflow-storageclass
+  claimRef:
+    name: airflow-local
+    namespace: airflow
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: airflow-local
   namespace: airflow
 spec:
   accessModes:
